--- a/helm/charts/apiserver/templates/deployment.yaml
+++ b/helm/charts/apiserver/templates/deployment.yaml
@@ -58,6 +58,8 @@ spec:
               value: {{ .Values.global.cp.dataplaneId }}
             - name: INSTANCE_ID
               value: {{ .Values.global.cp.instanceId }}
+            - name: SERVER_PORT
+              value: "{{ .Values.service.port }}"
         {{- if .Values.global.apiserver.logging.enabled }}
         - name: fluent-bit
           image: {{ .Values.global.apiserver.logging.image.registry }}/tci/fluent-bit:{{ .Values.global.apiserver.logging.image.registry.tag }}
