--- a/helm/charts/orchestrator/templates/deployment.yaml
+++ b/helm/charts/orchestrator/templates/deployment.yaml
@@ -71,6 +71,8 @@ spec:
               value: {{ .Values.global.cp.dataplaneId }}
             - name: INSTANCE_ID
               value: {{ .Values.global.cp.instanceId }}
+            - name: SERVER_PORT
+              value: "{{ .Values.service.port }}"
         {{- if .Values.global.orchestrator.deploymanager.enabled }}
         - name: deploymanager
           image: {{ .Values.global.orchestrator.deploymanager.image.registry }}/tci/tci-app-proxy:{{ .Values.global.orchestrator.deploymanager.image.tag }}
