--- a/helm/charts/orchestrator/values.yaml
+++ b/helm/charts/orchestrator/values.yaml
@@ -178,14 +178,16 @@ config:
 volumes:
   orchestrator:
     volumePath: "/data/"
+    subPath: "subdir"
     persistentVolumeClaim:
       # -- If `true`, then a `PersistentVolumeClaim` (PVC) is created.
       create: true
 
       # -- Specifies the name of the `StorageClass`
-      # in case of kind use "standard"
-      # in case of EKS "gp2"
-      storageClassName: "standard"
+      # in case of Kind/miniKube use "standard"
+      # in case of EKS/EBS "gp2"
+      # in case of EFS ""
+      storageClassName: ""
 
       # -- Specifies the standard K8s resource requests and/or limits
       resources:
@@ -198,6 +200,7 @@ volumes:
       volumeMode: Filesystem
 
       # -- Specifies the name of the persistent volume
+      # If EBS/EFS if storage class given, keep volume name empty
       volumeName: ""
 
     # -- When `persistentVolumeClaim.create` is `false`, then use this value to define an already-existing PVC.
