--- a/helm/charts/artifactmanager/values.yaml
+++ b/helm/charts/artifactmanager/values.yaml
@@ -1,17 +1,17 @@
-# Default values for bwprovisioner.
+# Default values for orchestrator.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 global:
   cp:
     dataplaneId: dp-dp1
-    instanceId: defaultinstid
-  bwprovisioner:
+    instanceId: defaultInstId
+  orchestrator:
     data:
       namespace: dp-integration-default
     image:
       registry: 664529841144.dkr.ecr.us-west-2.amazonaws.com
-      tag: 38-m1-ext
+      tag: 11-m1-ext
     deploymanager:
       image:
         enabled: false
@@ -28,7 +28,7 @@ global:
 replicaCount: 1
 
 image:
-  repository: tci/tci-bwprovisioner
+  repository: tci/tci-artifactmanager
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -62,8 +62,8 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 7814
-  targetPort: 7814
+  port: 7813
+  targetPort: 7813
 
 #ingress:
 #  enabled: false
@@ -79,8 +79,8 @@ service:
 #  #      - chart-example.local
 
 ingress:
-  # -- Enables configuration of ingress to expose flogoprovisioner. Requires ingress support in the Kubernetes cluster.
-  enabled: false
+  # -- Enables configuration of ingress to expose artifactmanager. Requires ingress support in the Kubernetes cluster.
+  enabled: true
   hostsOverride: false
   className: haproxy
   hosts:
@@ -88,6 +88,12 @@ ingress:
       paths:
         - path: /
           pathType: Prefix
+
+#  hosts:
+#    - host: ""
+#      paths:
+#        - path: /tibco/agent/integration/artifactmanager/
+#          pathType: Prefix
   # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
   annotations: {}
   tls: []
@@ -170,7 +176,7 @@ config:
   DP_INTERNAL_URL: "***NOT AVAILABLE***"
 
 volumes:
-  bwprovisioner:
+  artifactmanager:
     volumePath: "/data/"
     subPath: ""
     persistentVolumeClaim:
@@ -186,16 +192,16 @@ volumes:
       # -- Specifies the standard K8s resource requests and/or limits
       resources:
         requests:
-          storage: 1Gi
+          storage: 8Gi
 
       accessModes:
-        - ReadWriteMany
+        - ReadWriteOnce
 
       volumeMode: Filesystem
 
       # -- Specifies the name of the persistent volume
       # If EBS/EFS if storage class given, keep volume name empty
-      volumeName: "test-pv-store"
+      volumeName: ""
 
     # -- When `persistentVolumeClaim.create` is `false`, then use this value to define an already-existing PVC.
     existingClaim: ""
