--- a/helm/charts/apiserver/templates/deployment.yaml
+++ b/helm/charts/apiserver/templates/deployment.yaml
@@ -50,7 +50,7 @@ spec:
             - name: {{ $filename }}
               valueFrom:
                 configMapKeyRef:
-                  name: {{ .Release.Name }}-{{ .Chart.Name }}-serviceconfig
+                  name: {{ $.Release.Name }}-{{ $.Chart.Name }}-serviceconfig
                   key: {{ $filename }}
             {{- end }}
             {{- end }}
