--- a/helm/charts/apiserver/templates/ingress_external.yaml
+++ b/helm/charts/apiserver/templates/ingress_external.yaml
@@ -15,7 +15,7 @@ apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
-  name: {{ $fullName }}-external
+  name: {{ .Values.ingress.className }}-{{ $fullName }}-{{ .Values.global.cp.instanceId }}-external
   labels:
     app.kubernetes.io/component: load-balancer
     {{- include "apiserver.labels" . | nindent 4 }}
