--- a/helm/charts/bwprovisioner/templates/ingress.yaml
+++ b/helm/charts/bwprovisioner/templates/ingress.yaml
@@ -26,7 +26,7 @@ metadata:
     {{- end }}
 spec:
   {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
-  ingressClassName: haproxy-{{ .Values.global.cp.dataplaneId }}
+  ingressClassName: haproxy-dp-{{ .Values.global.cp.dataplaneId }}
   {{- end }}
   {{- if .Values.ingress.tls }}
   tls:
