fix port number

--- a/helm/charts/apiserver/templates/ingress_external.yaml
+++ b/helm/charts/apiserver/templates/ingress_external.yaml
@@ -55,7 +55,7 @@ spec:
               service:
                 name: {{ $fullName }}
                 port:
-                  number: {{ .Values.service.Port }}
+                  number: {{ $.Values.service.port }}
           {{- end }}
   {{- end }}
 {{- end }}
