--- a/helm/recipe/dp-bw-capabilties-latestv4.yaml
+++ b/helm/recipe/dp-bw-capabilties-latestv4.yaml
@@ -1,9 +1,7 @@
-capabilityId: TETRIS
-version: 1.0.0
 recipe:
   helmCharts:
     - name: bwprovisioner
-      namespace: tibco-dp-chcjpko2p4gfuco11ti0
+      namespace: ${NAMESPACE}
       repository:
         git:
           host: https://github.com/sasahoo-tibco/tp-integration.git
@@ -14,7 +12,7 @@ recipe:
             global:
               bwprovisioner:
                 data:
-                  namspace: tibco-dp-chcjpko2p4gfuco11ti0
+                  namspace: ${NAMESPACE}
                 image:
                   registry: 664529841144.dkr.ecr.us-west-2.amazonaws.com
                   tag: 38-m1-ext
@@ -26,20 +24,20 @@ recipe:
                 haproxy.org/timeout-http-request: 600s
                 ingress.kubernetes.io/rewrite-target: /
                 meta.helm.sh/release-name: bwprovisioner
-                meta.helm.sh/release-namespace: tibco-dp-chcjpko2p4gfuco11ti0
+                meta.helm.sh/release-namespace: ${NAMESPACE}
               enabled: true
               hostsOverride: false
             volumes:
               bwprovisioner:
                 persistentVolumeClaim:
                   create: true
-                  storageClassName: "gp2"
+                  storageClassName: ${STORAGE_CLASS_NAME}
       flags:
         install: true
         createNamespace: true
         dependencyUpdate: true
     - name: artifactmanager
-      namespace: tibco-dp-chcjpko2p4gfuco11ti0
+      namespace: ${NAMESPACE}
       repository:
         git:
           host: https://github.com/sasahoo-tibco/tp-integration.git
@@ -50,7 +48,7 @@ recipe:
             global:
               artifactmanager:
                 data:
-                  namspace: tibco-dp-chcjpko2p4gfuco11ti0
+                  namspace: ${NAMESPACE}
                 image:
                   registry: 664529841144.dkr.ecr.us-west-2.amazonaws.com
                   tag: 11-m1-ext
@@ -62,20 +60,20 @@ recipe:
                 haproxy.org/timeout-http-request: 600s
                 ingress.kubernetes.io/rewrite-target: /
                 meta.helm.sh/release-name: artifactmanager
-                meta.helm.sh/release-namespace: tibco-dp-chcjpko2p4gfuco11ti0
+                meta.helm.sh/release-namespace: ${NAMESPACE}
               enabled: true
               hostsOverride: false
             volumes:
               artifactmanager:
                 persistentVolumeClaim:
                   create: true
-                  storageClassName: "gp2"
+                  storageClassName: ${STORAGE_CLASS_NAME}
       flags:
         install: true
         createNamespace: true
         dependencyUpdate: true
     - name: apiserver
-      namespace: tibco-dp-chcjpko2p4gfuco11ti0
+      namespace: ${NAMESPACE}
       repository:
         git:
           host: https://github.com/sasahoo-tibco/tp-integration.git
@@ -86,7 +84,7 @@ recipe:
             global:
               apiserver:
                 data:
-                  namspace: tibco-dp-chcjpko2p4gfuco11ti0
+                  namspace: ${NAMESPACE}
                 image:
                   registry: 664529841144.dkr.ecr.us-west-2.amazonaws.com
                   tag: 7-m1-ext
@@ -98,7 +96,7 @@ recipe:
                 haproxy.org/timeout-http-request: 600s
                 ingress.kubernetes.io/rewrite-target: /
                 meta.helm.sh/release-name: apiserver
-                meta.helm.sh/release-namespace: tibco-dp-chcjpko2p4gfuco11ti0
+                meta.helm.sh/release-namespace: ${NAMESPACE}
               enabled: true
               hostsOverride: false
             ingressExternal:
@@ -109,10 +107,10 @@ recipe:
                 haproxy.org/timeout-http-request: 600s
                 ingress.kubernetes.io/rewrite-target: /
                 meta.helm.sh/release-name: apiserver
-                meta.helm.sh/release-namespace: tibco-dp-chcjpko2p4gfuco11ti0
+                meta.helm.sh/release-namespace: ${NAMESPACE}
               enabled: true
               hosts:
-                - host: "test.tci-env.us-west-2.tcie.pro"
+                - host: ${EXTERNAL_HOST}
                   paths:
                   - path: /
                     pathType: Prefix
@@ -120,9 +118,4 @@ recipe:
         install: true
         createNamespace: true
         dependencyUpdate: true
-isDevTesting: true
-status: deployed
-region: us-west-2
-tags:
-  - Tag1
-  - Tag2
+
