update chart values

--- a/helm/charts/bwprovisioner/values.yaml
+++ b/helm/charts/bwprovisioner/values.yaml
@@ -189,7 +189,7 @@ volumes:
           storage: 1Gi
 
       accessModes:
-        - ReadWriteMany
+        - ReadWriteOnce
 
       volumeMode: Filesystem
 
