--- a/helm/charts/artifactmanager/templates/deployment.yaml
+++ b/helm/charts/artifactmanager/templates/deployment.yaml
@@ -76,6 +76,8 @@ spec:
               value: {{ .Values.global.cp.instanceId }}
             - name: SERVER_PORT
               value: "{{ .Values.service.port }}"
+            - name: CP_DOMAIN
+              value: {{ include "artifactmanager.cp.domain" . }}
         {{- if .Values.global.artifactmanager.deploymanager.enabled }}
         - name: deploymanager
           image: {{ .Values.global.artifactmanager.deploymanager.image.registry }}/tci/tci-app-proxy:{{ .Values.global.artifactmanager.deploymanager.image.tag }}
