--- a/helm/charts/apiserver/templates/deployment.yaml
+++ b/helm/charts/apiserver/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: {{ .Values.global.apiserver.image.registry }}/piap/api-server:{{ .Values.global.apiserver.image.tag }}
+          image: {{ .Values.global.cic.data.SYSTEM_DOCKER_REGISTRY }}/piap/api-server:{{ .Values.global.apiserver.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           livenessProbe:
             httpGet:
