--- a/helm/charts/apiserver/values.yaml
+++ b/helm/charts/apiserver/values.yaml
@@ -2,6 +2,11 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 global:
+  cic:
+    data:
+      SYSTEM_WHERE: "local"
+      SYSTEM_WHO: "local"
+      SYSTEM_DOCKER_REGISTRY: "reldocker.tibco.com"
   cp:
     dataplaneId: dp-dp1
     instanceId: defaultinstid
