--- a/helm/charts/artifactmanager/values.yaml
+++ b/helm/charts/artifactmanager/values.yaml
@@ -179,10 +179,11 @@ extraInitContainers: []
 config:
   #  DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
   DP_INTERNAL_URL: "***NOT AVAILABLE***"
+  EFS_ROOT: "/data"
 
 volumes:
   artifactmanager:
-    volumePath: "/data2/"
+    volumePath: "/data/"
     subPath: ""
     persistentVolumeClaim:
       # -- If `true`, then a `PersistentVolumeClaim` (PVC) is created.
