--- a/helm/charts/bwprovisioner/values.yaml
+++ b/helm/charts/bwprovisioner/values.yaml
@@ -173,6 +173,8 @@ extraInitContainers: []
 config:
   #  DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
   DP_INTERNAL_URL: "***NOT AVAILABLE***"
+  BWCE_BASE_VERSION: "5-2.8.1-V47.0.1-GA-m1-ext"
+  ARTIFACT_MANAGER_PORT: "7813"
 
 volumes:
   bwprovisioner:
