update image registry

--- a/helm/charts/bwprovisioner/templates/deployment.yaml
+++ b/helm/charts/bwprovisioner/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
               name: server
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: {{ .Values.global.cic.data.SYSTEM_DOCKER_REGISTRY }}/piap/bw-provisioner:{{ .Values.global.bwprovisioner.image.tag }}
+          image: {{ .Values.global.bwprovisioner.image.registry }}/piap/bw-provisioner:{{ .Values.global.bwprovisioner.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
             - name: data
