--- a/helm/recipe/dp-bw-capabilties-latestv4.yaml
+++ b/helm/recipe/dp-bw-capabilties-latestv4.yaml
@@ -122,7 +122,7 @@ recipe:
         install: true
         createNamespace: true
         dependencyUpdate: true
-        isDevTesting: true
+        isDevTesting: false
 status: deployed
 region: us-west-2
 tags:
