rbac enabled for all bwce capabilties charts

--- a/helm/charts/apiserver/templates/deployment.yaml
+++ b/helm/charts/apiserver/templates/deployment.yaml
@@ -24,7 +24,9 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "apiserver.serviceAccountName" . }}
+      {{- if .Values.rbac.enabled }}
+      serviceAccountName: {{ include "apiserver.sa" . }}
+      {{- end }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
