--- a/helm/charts/artifactmanager/values.yaml
+++ b/helm/charts/artifactmanager/values.yaml
@@ -211,3 +211,5 @@ volumes:
 
     # -- When `persistentVolumeClaim.create` is `false`, then use this value to define an already-existing PVC.
     existingClaim: ""
+rbac:
+  enabled: true
