--- a/helm/charts/distributed-lock-operator/templates/rbac.yaml
+++ b/helm/charts/distributed-lock-operator/templates/rbac.yaml
@@ -142,4 +142,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ include "dp-core-distributed-lock-operator.consts.appName" . }}
+  namespace: {{ include "dp-core-distributed-lock-operator.consts.namespace" . }}
 
