--- a/helm/charts/distributed-lock-operator/values.yaml
+++ b/helm/charts/distributed-lock-operator/values.yaml
@@ -1,3 +1,15 @@
+global:
+  where: "local"
+  who: "tibco-dp"
+  scale: "minimal"
+  security: "defaulted"
+  dockerRegistry: "664529841144.dkr.ecr.us-west-2.amazonaws.com"
+  enableLogging: true
+  buildNumber: 55
+  cp:
+    dataplaneId: dp2
+    instanceId: defaultinstid
+
 enableWebHooks: true
 
 # if enabled distributed-lock-operator will have two replicas and podDisruptionBudget
@@ -9,10 +21,4 @@ settingsConfigmap:
   - key: "LOCK_EXPIRY_DURATION"
     value: "2m"
 
-global:
-  where: "local"
-  who: "local"
-  scale: "minimal"
-  security: "defaulted"
-  dockerRegistry: "reldocker.tibco.com"
-  enableLogging: true
+
