--- a/helm/recipe/dp-bw-capabilties-latestv4.yaml
+++ b/helm/recipe/dp-bw-capabilties-latestv4.yaml
@@ -20,7 +20,7 @@ recipe:
                   namspace: ${NAMESPACE}
                 image:
                   registry: 664529841144.dkr.ecr.us-west-2.amazonaws.com
-                  tag: 84-m1-ext
+                  tag: 105
             ingress:
               annotations:
                 haproxy.org/cors-enable: "true"
