--- a/helm/charts/distributed-lock-operator/templates/deployment.yaml
+++ b/helm/charts/distributed-lock-operator/templates/deployment.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,61 +15,42 @@ spec:
     metadata:
       labels:
         {{- include "dp-core-distributed-lock-operator.shared.labels.standard" . | nindent 8 }}
-      annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "8080"
-        prometheus.io/path: /metrics
     spec:
+      {{- if .Values.global.serviceAccount }}
+      serviceAccountName: {{ .Values.global.serviceAccount }}
+      {{- else }}
       serviceAccountName: {{ include "dp-core-distributed-lock-operator.consts.appName" . }}
+      {{- end }}
       nodeSelector:
         kubernetes.io/os: linux
       containers:
       - name: distributed-lock-operator
-        image: {{ .Values.global.dockerRegistry }}/stratosphere/distributed-lock-operator:{{ .Values.global.buildNumber }}
-        {{- if ne .Values.global.where (include "dp-core-distributed-lock-operator.shared.global.where.local" .) }}
-        {{- if eq .Values.global.scale (include "dp-core-distributed-lock-operator.shared.global.scale.minimal" .) }}
-        resources:
-          requests:
-            cpu: 100m
-            memory: 100Mi
-          limits:
-            cpu: 500m
-            memory: 500Mi
-        {{- else }}
-        resources:
-          requests:
-            cpu: 200m
-            memory: 200Mi
-          limits:
-            cpu: 1000m
-            memory: 1000Mi
-        {{- end }}
-        {{- end }}
-        {{- if .Values.highAvailabilityMode }}
-        args:
-          - --leader-elect
-        {{- end }}
+        image: {{ .Values.global.image.Registry }}/stratosphere/distributed-lock-operator:{{ .Values.global.image.tag }
         ports:
           - containerPort: 8080
             name: metrics
           - containerPort: 9443
             name: webhook
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         env:
+          - name: WATCH_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
           - name: WATCH_NAMESPACE_PREFIX
-            value: tibco-dp-
+            value: ""
           - name: ENABLE_WEBHOOKS
             value: "{{ .Values.enableWebHooks }}"
           - name: SETTINGS_PROPERTIES_VOLUME_PATH
             value: "/etc/config/settings.properties"
-{{- if .Values.enableWebHooks }}
         volumeMounts:
+{{- if .Values.enableWebHooks }}
           - mountPath: /tmp/k8s-webhook-server/serving-certs
             name: cert
             readOnly: true
+{{- end }}
           - name: settings-config-volume
             mountPath: "/etc/config"
-{{- end }}
       volumes:
 {{- if .Values.enableWebHooks }}
         - name: cert
