--- a/helm/charts/distributed-lock-operator/templates/rbac.yaml
+++ b/helm/charts/distributed-lock-operator/templates/rbac.yaml
@@ -1,94 +1,24 @@
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: {{ include "dp-core-distributed-lock-operator.shared.func.globalResourcePrefix" . }}aggregate-to-admin
-  labels:
-    {{- include "dp-core-distributed-lock-operator.shared.labels.standard" . | nindent 4 }}
-    rbac.authorization.k8s.io/aggregate-to-admin: "true"
-rules:
-- apiGroups:
-  - apiextensions.k8s.io
-  resources:
-  - customresourcedefinitions
-  resourceNames:
-  - tibcodistributedlocks.cloud.tibco.com
-  verbs:
-  - get
-  - list
-- apiGroups:
-  - cloud.tibco.com
-  resources:
-  - tibcodistributedlocks
-  verbs:
-  - "*"
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: {{ include "dp-core-distributed-lock-operator.shared.func.globalResourcePrefix" . }}aggregate-to-view
-  labels:
-    {{- include "dp-core-distributed-lock-operator.shared.labels.standard" . | nindent 4 }}
-    rbac.authorization.k8s.io/aggregate-to-view: "true"
-rules:
-- apiGroups:
-  - cloud.tibco.com
-  resources:
-  - tibcodistributedlocks
-  verbs:
-  - get
-  - list
-  - watch
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: {{ include "dp-core-distributed-lock-operator.shared.func.globalResourcePrefix" . }}aggregate-to-monitor
-  labels:
-    {{- include "dp-core-distributed-lock-operator.shared.labels.standard" . | nindent 4 }}
-    rbac.authorization.k8s.io/aggregate-to-monitor: "true"
-rules:
-- apiGroups:
-  - cloud.tibco.com
-  resources:
-  - tibcodistributedlocks
-  verbs:
-  - list
-
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: {{ include "dp-core-distributed-lock-operator.shared.func.globalResourcePrefix" . }}aggregate-to-tenant-ops
-  labels:
-    {{- include "dp-core-distributed-lock-operator.shared.labels.standard" . | nindent 4 }}
-    rbac.authorization.k8s.io/aggregate-to-tenant-ops: "true"
-rules:
-- apiGroups:
-  - cloud.tibco.com
-  resources:
-  - tibcodistributedlocks
-  verbs:
-  - "*"
-
 ### OPERATOR RBAC
 
 ---
+
+{{- if eq .Values.global.serviceAccount "" }}
 kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: {{ include "dp-core-distributed-lock-operator.consts.appName" . }}
   labels:
     {{- include "dp-core-distributed-lock-operator.shared.labels.standard" . | nindent 4 }}
+{{- end }}
 
 ---
+
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
   labels:
     {{- include "dp-core-distributed-lock-operator.shared.labels.standard" . | nindent 4 }}
-  name: {{ include "dp-core-distributed-lock-operator.shared.func.globalResourcePrefix" . }}cr
+  name: {{ include "dp-core-distributed-lock-operator.shared.func.globalResourcePrefix" . }}role
 rules:
 - apiGroups:
   - apiextensions.k8s.io
@@ -119,28 +49,25 @@ rules:
   verbs:
     - create
     - patch
-{{- if .Values.highAvailabilityMode }}
-- apiGroups:
-  - coordination.k8s.io
-  resources:
-  - leases
-  verbs:
-  - '*'
-{{- end }}
 
 ---
-kind: ClusterRoleBinding
+
+kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ include "dp-core-distributed-lock-operator.shared.func.globalResourcePrefix" . }}crb
+  name: {{ include "dp-core-distributed-lock-operator.shared.func.globalResourcePrefix" . }}rb
   labels:
     {{- include "dp-core-distributed-lock-operator.shared.labels.standard" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: {{ include "dp-core-distributed-lock-operator.shared.func.globalResourcePrefix" . }}cr
+  kind: Role
+  name: {{ include "dp-core-distributed-lock-operator.shared.func.globalResourcePrefix" . }}role
 subjects:
 - kind: ServiceAccount
+  {{- if eq .Values.global.serviceAccount "" }}
   name: {{ include "dp-core-distributed-lock-operator.consts.appName" . }}
+  {{- else }}
+  name: {{ .Values.global.serviceAccount }}
+  {{- end }}
   namespace: {{ include "dp-core-distributed-lock-operator.consts.namespace" . }}
 
