--- a/helm/charts/distributed-lock-operator/templates/deployment.yaml
+++ b/helm/charts/distributed-lock-operator/templates/deployment.yaml
@@ -16,8 +16,8 @@ spec:
       labels:
         {{- include "dp-core-distributed-lock-operator.shared.labels.standard" . | nindent 8 }}
     spec:
-      {{- if .Values.global.serviceAccount }}
-      serviceAccountName: {{ .Values.global.serviceAccount }}
+      {{- if .Values.global.cp.distlockoperator.serviceAccount }}
+      serviceAccountName: {{ .Values.global.cp.distlockoperator.serviceAccount }}
       {{- else }}
       serviceAccountName: {{ include "dp-core-distributed-lock-operator.consts.appName" . }}
       {{- end }}
