--- a/helm/charts/distributed-lock-operator/values.yaml
+++ b/helm/charts/distributed-lock-operator/values.yaml
@@ -6,6 +6,8 @@ global:
     tag: 58
   cp:
     dataplaneId: ""
+    distlockoperator:
+      serviceAccount: "" #user provided service account.
 
 enableWebHooks: true
 
