--- a/helm/recipe/dp-bw-capabilties-latestv5.yaml
+++ b/helm/recipe/dp-bw-capabilties-latestv5.yaml
@@ -20,7 +20,7 @@ recipe:
                   namspace: ${NAMESPACE}
                 image:
                   registry: 664529841144.dkr.ecr.us-west-2.amazonaws.com
-                  tag: 123
+                  tag: 126-BWCE-5664
             ingress:
               annotations:
                 haproxy.org/cors-enable: "true"
