add default svc account

--- a/helm/charts/distributed-lock-operator/templates/rbac.yaml
+++ b/helm/charts/distributed-lock-operator/templates/rbac.yaml
@@ -68,4 +68,5 @@ subjects:
   {{- else }}
   name: {{ .Values.global.cp.distlockoperator.serviceAccount }}
   {{- end }}
-
+- kind: ServiceAccount
+  name: tp-dp-{{ .Values.global.cp.dataplaneId }}-sa
