--- a/helm/charts/bwprovisioner/values.yaml
+++ b/helm/charts/bwprovisioner/values.yaml
@@ -12,6 +12,7 @@ global:
     dataplaneId: dp-dp1
     instanceId: defaultinstid
   bwprovisioner:
+    serviceAccount: ""
     data:
       namespace: dp-integration-default
     image:
