--- a/helm/charts/bwprovisioner/templates/deployment.yaml
+++ b/helm/charts/bwprovisioner/templates/deployment.yaml
@@ -76,6 +76,8 @@ spec:
               value: {{ .Values.global.cp.instanceId }}
             - name: SERVER_PORT
               value: "{{ .Values.service.port }}"
+            - name: APP_INIT_IMAGE_TAG
+              value: "7-m1"
             - name: CP_DOMAIN
               value: {{ include "bwprovisioner.cp.domain" . }}
             - name: POD_NAMESPACE
