--- a/helm/charts/artifactmanager/templates/deployment.yaml
+++ b/helm/charts/artifactmanager/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
               name: server
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: {{ .Values.global.artifactmanager.image.registry }}/piap/orchestrator:{{ .Values.global.artifactmanager.image.tag }}
+          image: {{ .Values.global.artifactmanager.image.registry }}/piap/artifactmanager:{{ .Values.global.artifactmanager.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
             - name: data
