BWCE-5806:Use custom service account for capability charts

--- a/helm/charts/artifactmanager/templates/deployment.yaml
+++ b/helm/charts/artifactmanager/templates/deployment.yaml
@@ -29,7 +29,9 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- if .Values.rbac.enabled }}
+      {{- if .Values.global.artifactmanager.serviceAccount }}
+      serviceAccountName: {{ .Values.global.artifactmanager.serviceAccount }}
+      {{- else }}
       serviceAccountName: {{ include "artifactmanager.sa" . }}
       {{- end }}
       securityContext:
