--- a/helm/charts/flogoprovisioner/templates/deployment.yaml
+++ b/helm/charts/flogoprovisioner/templates/deployment.yaml
@@ -29,7 +29,9 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- if .Values.rbac.enabled }}
+      {{- if .Values.global.flogoprovisioner.serviceAccount }}
+      serviceAccountName: {{ .Values.global.flogoprovisioner.serviceAccount }}
+      {{- else }}
       serviceAccountName: {{ include "flogoprovisioner.sa" . }}
       {{- end }}
       securityContext:
