--- a/helm/charts/flogoprovisioner/templates/rbac.yaml
+++ b/helm/charts/flogoprovisioner/templates/rbac.yaml
@@ -1,11 +1,10 @@
-{{- if .Values.rbac.enabled }}
+{{- if eq .Values.global.flogoprovisioner.serviceAccount "" }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "flogoprovisioner.sa" . }}
 {{- end }}
 ---
-{{- if .Values.rbac.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -29,18 +28,19 @@ rules:
   - apiGroups: [""]
     resources: ["services"]
     verbs: ["get","list","watch","create","delete","patch","update"]
-{{- end }}
 ---
-{{- if .Values.rbac.enabled }}
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ include "flogoprovisioner.role-bind" . }}
 subjects:
   - kind: ServiceAccount
+    {{- if eq .Values.global.flogoprovisioner.serviceAccount "" }}
     name: {{ include "flogoprovisioner.sa" . }}
+    {{- else }}
+    name: {{ .Values.global.flogoprovisioner.serviceAccount }}
+    {{- end }}
 roleRef:
   kind: Role
   name: {{ include "flogoprovisioner.role" . }}
   apiGroup: rbac.authorization.k8s.io
-{{- end }}
