--- a/helm/charts/flogoprovisioner/values.yaml
+++ b/helm/charts/flogoprovisioner/values.yaml
@@ -209,3 +209,5 @@ volumes:
     # -- When `persistentVolumeClaim.create` is `false`, then use this value to define an already-existing PVC.
     existingClaim: ""
 
+rbac:
+  create: false
