--- a/helm/charts/bwprovisioner/templates/rbac.yaml
+++ b/helm/charts/bwprovisioner/templates/rbac.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "bwprovisioner.sa" . }}
-{{- end }}
+  
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -44,3 +44,4 @@ roleRef:
   kind: Role
   name: {{ include "bwprovisioner.role" . }}
   apiGroup: rbac.authorization.k8s.io
+{{- end -}}
