--- a/helm/charts/flogoprovisioner/templates/deployment.yaml
+++ b/helm/charts/flogoprovisioner/templates/deployment.yaml
@@ -43,7 +43,7 @@ spec:
               name: server
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: {{ .Values.global.flogoprovisioner.image.registry }}/piap/flogo-provisioner:{{ .Values.global.flogoprovisioner.image.tag }}
+          image: {{ .Values.global.flogoprovisioner.image.registry }}/piap/flogo-provisioner:18
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
             - name: data
