--- a/helm/charts/o11y-service/Chart.yaml
+++ b/helm/charts/o11y-service/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-name: logproxy
+name: o11yservice
 version: 1.0.0
 appVersion: "1.0.0"
-description: TIBCO Platform Dataplane Infrastructre Core -- Log Proxy
-home: https://github.com/tibco/tp-log-proxy.git
+description: TIBCO Platform Dataplane Infrastructre Core -- o11y-service
+home: https://github.com/tibco/tp-o11y-service.git
 icon: https://pbs.twimg.com/profile_images/1064638558110007296/K6HqaXwh_400x400.jpg
 maintainers:
   - name: TIBCO CIC Compute Dev Team
