Added isDevTesting: false for O11Y recipe

--- a/helm/recipe/dp-o11y-service-capabilties-v1.yaml
+++ b/helm/recipe/dp-o11y-service-capabilties-v1.yaml
@@ -23,6 +23,7 @@ recipe:
         install: true
         createNamespace: false
         dependencyUpdate: true
+        isDevTesting: false
 status: deployed
 region: us-west-2
 tags:
